--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,13 @@ h6 {
     margin-left: 30px;
     color: rgb(95, 93, 93);
 }
+
 h3 {
     margin-top: 13px;
     margin-left: 30px;
+}
+
+.ex {
+    cursor: pointer;
+
 }
